<resources>
    <string name="app_name">Hacktiv Final Project 4</string>
    <string name="bux_is_a_online_booking_service_for_bus_transportation_login_now_to_user_bux_services">Bux is a online booking service for Bus transportation. login now to user Bux services.</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="book_now">BOOK NOW</string>
    <string name="_2">2</string>
    <string name="x">x</string>
    <string name="rp">Rp.</string>
</resources>