<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".ui.BusDetailActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/book_a_trip"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_bus_book"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bus_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_bus_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bus_name_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toStartOf="@id/cv_bus_see_picture"
                app:layout_constraintStart_toStartOf="@id/cv_bus_image"
                app:layout_constraintTop_toBottomOf="@id/cv_bus_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp">

                    <TextView
                        android:id="@+id/tv_bus_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Sempati Star"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/iv_icon_rating"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_icon_rating"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_baseline_star_rate_24"
                        app:layout_constraintBottom_toBottomOf="@id/tv_bus_rating"
                        app:layout_constraintEnd_toStartOf="@id/tv_bus_rating"
                        app:layout_constraintTop_toTopOf="@id/tv_bus_rating" />

                    <TextView
                        android:id="@+id/tv_bus_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9/10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bus_see_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary_purple_light"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="@id/cv_bus_image"
                app:layout_constraintTop_toBottomOf="@id/cv_bus_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:text="See picture"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_bus_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Friday, 23 Jul 2019"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_bus_name_rate" />

            <TextView
                android:id="@+id/tv_departure_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="MEDAN"
                android:textColor="@color/primary_purple_light"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bus_date" />

            <TextView
                android:id="@+id/tv_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="17:35"
                android:textColor="#808080"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_departure_city" />

            <TextView
                android:id="@+id/tv_arrival_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="PEKANBARU"
                android:textColor="@color/primary_purple_light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bus_date" />

            <TextView
                android:id="@+id/tv_arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="09:10"
                android:textColor="#808080"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_arrival_city" />

            <TextView
                android:id="@+id/tv_bus_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13h 45m"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_departure_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_departure_city" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bus_total_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bus_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_bus_passenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bus_passenger_times_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/x"
            app:layout_constraintStart_toEndOf="@id/tv_bus_passenger"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bus_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="166.000,00"
            app:layout_constraintStart_toEndOf="@id/tv_bus_passenger_times_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/rp"
            android:textColor="@color/primary_purple_light"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bus_passenger" />

        <TextView
            android:id="@+id/tv_bus_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="332.000,00"
            android:textColor="@color/primary_purple_light"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_rupiah"
            app:layout_constraintTop_toBottomOf="@id/tv_bus_passenger" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bus_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_btn_purple"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/book_now"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>